[tool.poetry]
name = "paper-gist"
version = "0.1.0"
description = ""
authors = ["pytholic <rajahaseeb147@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
llama-index-llms-ollama = "^0.3.1"
llama-index-readers-file = "^0.2.1"
pymupdf = "^1.24.10"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index = "^0.11.8"
llama-index-vector-stores-qdrant = "^0.3.0"
qdrant-client = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
